--- a/public/enrichment/mart-visual-enrichment/package.json
+++ b/public/enrichment/mart-visual-enrichment/package.json
@@ -10,6 +10,9 @@
     "karma-mocha-reporter": "~0.2.2",
     "karma-safari-launcher": "~0.1.1",
     "uglifyjs": "~2.3.6",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-html2js-preprocessor": "~0.1.0"
   }
 }
