--- a/public/enrichment/mart-visual-enrichment/.travis.yml
+++ b/public/enrichment/mart-visual-enrichment/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
-  - 0.8
+  - 0.11
+
+branches:
+  only:
+    - master
+    - dev
 
 before_script:
   - export DISPLAY=:99.0
@@ -11,6 +16,4 @@ before_script:
   - sleep 1 # give server time to start
 
 script:
-  - karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
-  - webdriver-manager update
-  - protractor config/protractor-conf.js --browser=firefox
+  - karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers Firefox,Chrome
