--- a/public/enrichment/mart-visual-enrichment/package.json
+++ b/public/enrichment/mart-visual-enrichment/package.json
@@ -15,6 +15,7 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "gulp": "~3.6.0",
-    "shelljs": "~0.2.6"
+    "shelljs": "~0.2.6",
+    "gulp-jshint": "^1.5.2"
   }
 }
